Added basic wine list and cellar, added search bar

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <title>MVP Cellar Tracker</title>
   </head>
   <body>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
     <div id="app"></div>
     <script type="text/javascript" src='bundle.js'></script>
   </body>
